fixed email link

--- a/server/src/main/resources/static/500.html
+++ b/server/src/main/resources/static/500.html
@@ -12,7 +12,7 @@
     </div>
 
     <p>
-        Sorry, but this page is terribly broken. It's not your fault. Really not. Head back to the <a href="/">homepage</a> or <a href="slotties@gmail.com">contact me</a>. Sorry!
+        Sorry, but this page is terribly broken. It's not your fault. Really not. Head back to the <a href="/">homepage</a> or <a href="mailto:slotties@gmail.com">contact me</a>. Sorry!
     </p>
 </div>
 </body>
